src/test/deca/context/invalid/decl_init/type_undefined.deca
// Description:
//    Déclaration d'une variable de type non défini
//
// Resultats:
//    Line 9 : Type non défini
// 

{
    TypeNonDef a;
}
